[project]
name = "policymind-ai"
version = "0.1.0"
description = "OpenEnv environment for insurance policy decision making"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sai Praveen" }
]
license = { text = "MIT" }
keywords = ["openenv", "insurance", "policy", "decision-making", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Insurance"
]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic>=2",
  "openai",
  "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://huggingface.co/spaces/saipraveen-k/policymind-ai"
Repository = "https://github.com/saipraveen-k/policymind-ai"
Issues = "https://github.com/saipraveen-k/policymind-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "tasks*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
